# xs

./: .gitignore  API.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMMANDS.md  CONTRIBUTING.md  LANGUAGE.md  Makefile  PLUGINS.md  POLICY.md  README.md  STATUS.md  demo_prov.xs  xs.toml
.github/workflows/: ci.yml
book/src/: cli.md  effects.md  performance.md
docs/release-notes/: v1.2.11.md  v1.2.13.md  v1.2.18.md  v1.2.24.md
editors/neovim/lua/: xs-lang.lua
editors/tree-sitter-xs/: README.md  grammar.js  package.json
editors/tree-sitter-xs/queries/: highlights.scm
editors/vscode/: extension.js
examples/: error_handling.xs  plugin_demo.xs
src/: main.c  wasm_main.c  wasm_stubs.c  xs_embed.c  xs_embed.h
src/compiler/: match_compiler.c  match_compiler.h
src/core/: ast.c  ast.h  lexer.c  lexer.h  limits.c  limits.h  parser.c  parser.h  regex.c  regex.h  strbuf.c  value.c  xs.h  xs_thread.h
src/fmt/: fmt.c
src/jit/: arm64.c  jit.c  ra_codegen.c  ra_codegen_arm64.c  ra_ir.h  ra_lower.c
src/lint/: lint.c
src/lsp/: lsp.c
src/net/: http_server.c  http_server.h
src/optimizer/: inline_cache.c  inline_cache.h  optimizer.c
src/pkg/: pkg.c  pkg.h
src/profiler/: profiler.c
src/runtime/: async.c  async.h  builtins.c  builtins.h  builtins_async.c  builtins_buf.c  builtins_collections.c  builtins_db.c  builtins_encode.c  builtins_fmt.c  builtins_fs.c  builtins_http.c  builtins_io.c  builtins_json.c  builtins_math.c  builtins_net.c  builtins_os.c  builtins_process.c  builtins_random.c  builtins_re.c  builtins_thread.c  concurrent.c  concurrent.h  error.c  error.h  event_loop.c  event_loop.h  interp.c  interp.h  interp_derive.c  scheduler.c  scheduler.h  triggers.c
src/semantic/: purity.c  purity.h  resolve.c  scoped_check.c  scoped_check.h  sema.c  sema.h  typecheck.c
src/tracer/: replay.c  replay.h  tracer.c  tracer.h
src/transpiler/: c_gen.c  js.c  wasm.c
src/types/: types.c
src/vm/: bytecode.c  bytecode.h  compiler.c  vm.c  vm.h  vm_complete.c  vm_thread.c
tests/: run-all.sh  run.sh  test_cli.sh  test_concurrency.xs  test_contextual_kw.xs  test_core.xs  test_error_handling.xs  test_fs.xs  test_http_client.xs  test_http_server.xs  test_limits.sh  test_limits.xs  test_map_patterns.xs  test_match_compiler.xs  test_match_shapes.xs  test_provenance.xs  test_record_prov.xs  test_record_rich.xs  test_regex_engine.xs  test_runtime_errors.xs  test_stdlib_ext.xs  test_stdlib_modules.xs  test_strbuf.xs  test_transpiler_diff.sh
tests/adversarial/: run.sh  test_deep_recursion.xs  test_huge_strings.xs  test_pathological_match.xs  test_stdin_edge_cases.xs  test_weird_unicode.xs
tests/conformance/: README.md  c01_literals.xs  c02_control_flow.xs  c03_functions.xs  c04_patterns.xs
tests/fuzz/: fuzz_parser.c  stubs.c
tests/golden/: run.sh
tests/golden/ast/: fn_decl.expected  let_binop.expected  match_slice.expected  match_slice.xs
tests/golden/errors/: undefined_var.expected  undefined_var.xs  yield_outside.expected  yield_outside.xs
tests/negative/: bad_syntax_missing_brace.xs  bool_times_int.xs  call_non_callable.xs  divide_by_zero.xs  match_no_subject.xs  run.sh  scoped_method_push.xs  scoped_return.xs  string_minus_string.xs  type_mismatch_add.xs  unclosed_string.xs  undefined_variable.xs  yield_outside_generator.xs  yield_top_level.xs
tests/plugins/: provenance.xs
tests/property/: arithmetic.xs  arrays.xs  harness.xs  run.sh  strings.xs
tests/regression/: README.md  bug001_match_slice_matches_int.xs  bug002_yield_outside_generator.xs  bug003_db_where_column_name.xs  bug004_divide_by_zero_exits_nonzero.xs  bug005_unterminated_string_exits_nonzero.xs  bug015_loop_closure_capture.xs  bug018_real_concurrent_spawn.xs  bug020_vm_overload_dispatch.xs  bug021_lazy_generators.xs  bug023_typecheck_fn_return.xs  bug029_http_router.xs  bug054_wrapping_decorators.xs  bug055_vm_method_error_span.xs  scoped_local_use_ok.xs
tests/unit/: bytecode_buf_test.c
